# fmengine

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.ampere  Dockerfile.hopper  Makefile  README.md  black.toml  fmengine.yaml  pyproject.toml  requirements-dev.txt  requirements-docker.txt  requirements.txt  ruff.toml
docs/: requirements.txt
docs/source/: cli.md  conf.py  distributed.md  examples.md  getting_start.md  index.md  scripts.md
examples/: finetune_tinyllama.yaml  microllama.yaml  model_def.yaml  pretrain_microllama.yaml  tinyllama.yaml  tinyllama_1b.yaml  tinyllama_dp.yaml  tinyllama_tp.yaml  train_microllama.sh  train_tinyllama.sh  train_tinyllama_dp.sh  train_tinyllama_slurm.slurm  train_tinyllama_tp.sh
fmengine/callbacks/: __init__.py  _base.py  builder.py  validation_callback.py
fmengine/cli/: eval.py  export.py  fmengine.py  generation.py  main.py  others.py  trainer.py  utils.py
fmengine/core/checkpoint/: __init__.py  checkpoint.py  train_state.py
fmengine/core/configs/: __init__.py  train_config.py  utils.py
fmengine/core/nn/: __init__.py
fmengine/datasets/: __init__.py  huggingface.py
fmengine/evaluator/: __init__.py  jsonl_evaluator.py
fmengine/generator/: __init__.py  generate.py  sampler.py
fmengine/models/: builder.py  utils.py
fmengine/utilities/: __init__.py  configs.py  errors.py  garbage_collection.py  logging.py  metric_logger.py  monitor.py  others.py  patch_utility.py  precision.py  profiler.py
scripts/: compliance.sh  install_apex.sh  train_tinyllama.sh
tests/interops/: test_llama_conversion.py  test_permute.py
(+53 files in other folders)
